CHAPT2_ws/log/build_2025-03-06_22-25-51/demo_py_pkg/stdout_stderr.log
running egg_info
creating ../../build/demo_py_pkg/demo_py_pkg.egg-info
writing ../../build/demo_py_pkg/demo_py_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/demo_py_pkg/demo_py_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/demo_py_pkg/demo_py_pkg.egg-info/entry_points.txt
writing requirements to ../../build/demo_py_pkg/demo_py_pkg.egg-info/requires.txt
writing top-level names to ../../build/demo_py_pkg/demo_py_pkg.egg-info/top_level.txt
writing manifest file '../../build/demo_py_pkg/demo_py_pkg.egg-info/SOURCES.txt'
reading manifest file '../../build/demo_py_pkg/demo_py_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/demo_py_pkg/demo_py_pkg.egg-info/SOURCES.txt'
running build
running build_py
creating /home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/build
creating /home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/build/lib
creating /home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/build/lib/demo_py_pkg
copying demo_py_pkg/__init__.py -> /home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/build/lib/demo_py_pkg
copying demo_py_pkg/person_node.py -> /home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/build/lib/demo_py_pkg
running install
running install_lib
creating /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg
copying /home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/build/lib/demo_py_pkg/__init__.py -> /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg
copying /home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/build/lib/demo_py_pkg/person_node.py -> /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg
byte-compiling /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg/__init__.py to __init__.cpython-38.pyc
byte-compiling /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg/person_node.py to person_node.cpython-38.pyc
  File "/home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg/person_node.py", line 5
    
    ^
SyntaxError: unexpected EOF while parsing

running install_data
creating /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/share/ament_index
creating /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/share/ament_index/resource_index
creating /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/share/ament_index/resource_index/packages
copying resource/demo_py_pkg -> /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/share/ament_index/resource_index/packages
copying package.xml -> /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/share/demo_py_pkg
running install_egg_info
Copying ../../build/demo_py_pkg/demo_py_pkg.egg-info to /home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/home/wxx/study_ros2/CHAPT2_ws/build/demo_py_pkg/install.log'
